[package]
name = "counter-solana-bytemuck"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []
certora = ["no-entrypoint", "dep:cvt", "dep:nondet", 
           "dep:cvt-macros", "dep:early-panic", "dep:calltrace", 
           "dep:solana_cvt", "dep:hook_macro"]
certora_vacuity = ["cvt/vacuity"]


[dependencies]
solana-program = "=2.0.22"
borsh = "=0.10"
bytemuck = "1.7.2"
spl-pod = "0.2.5"

nondet = { workspace = true, optional = true, features = ["solana", "derive"]}
cvt = { workspace = true, optional = true}
cvt-macros = { workspace = true, optional = true}
early-panic = { workspace = true, optional = true}
calltrace = { workspace = true, optional = true}
solana_cvt = { workspace = true, optional = true}
#vectors = { workspace = true, optional = true}
hook_macro = { workspace = true, optional = true}
